--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "lint:fix": "eslint --fix src --ext ts,tsx",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
   "devDependencies": {
@@ -12,7 +13,7 @@
     "@types/node": "^14.14.35",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
